# maxines.garden

./: .gitignore  Cargo.toml  Makefile  README.md  astro.config.mjs  flake.nix  fourmolu.yaml  garden.cabal  package-lock.json  package.json
Garden/: _.g
src/: Document.hs  Eval.hs  Main.hs  Parser.y  Unit.hs  constants.ts  content.config.ts
src/Data/: Phase.hs  Source.hs  SourcePos.hs  SourceSpan.hs
src/Document/: Obj.hs
src/Encoding/: UTF8.hs
src/Eval/: Error.hs  Internal.hs
src/Parser/: Error.hs  Internal.hs  Lexer.x
src/Syntax/: Obj.hs  Token.hs
src/components/: BaseHead.astro  Chevron.astro  Footer.astro  Header.astro  NavBar.astro  OnThisPage.astro  Search.astro  SideBar.astro
src/components/icons/: GitHub.astro  Logo.astro
src/components/layouts/: BaseHead.astro  Footer.astro  Header.astro  NavBar.astro  SideBar.astro
src/content/entries/: 2-pass-lisp-parser.md  introduction-to-type-theory.md  intuition-behind-homotopy-type-theory.md  lorem-ipsum.md  overview.md  quic-and-actors-with-tokio.md  vanity-repositories-for-github-pages.md
src/layouts/: GardenEntry.astro
src/pages/: index.astro  rss.xml.js
src/pages/entries/: [...slug].astro  index.astro
src/styles/: garden-entry.css  global.css
