cabal-version: 3.0
name:          garden
version:       0.1.0
build-type:    Simple

executable garden
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:
    Data.Source
    Data.SourcePos
    Data.SourceSpan
    Encoding.UTF8
    Parser.Internal
    Parser.Error
    Syntax.Token
    Parser.Lexer
    Parser
    Syntax.Obj
    Eval.Internal
    Eval
  build-depends:  
    , base
    , text
    , mtl
    , array
    , deque
  build-tool-depends:
    , alex:alex
    , happy:happy
  default-extensions:
    ImportQualifiedPost
    OverloadedRecordDot
    OverloadedLists
    FlexibleContexts
    BlockArguments
    TupleSections
    MultiParamTypeClasses
    LambdaCase
    TypeOperators
    OverloadedStrings
  default-language: GHC2021 